--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+node_modules/
 # Dependency directories
 node_modules/
 
@@ -12,6 +14,6 @@ npm-debug.log*
 # IDE files
 .vscode/
 .idea/
-
+rr
 # macOS files
 .DS_Storenode_modules/
